// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sample Component snapshot 1`] = `
Array [
  <h1>
    Hello World.
  </h1>,
  <h2>
    test...
  </h2>,
  <h3>
    test
  </h3>,
  <style
    jsx={true}
  >
    
          h1 {color: black}
          h2 {color: blue}
          h3 {color: black}
        
  </style>,
]
`;

exports[`Sample Component スナップショット０２ 1`] = `
Array [
  <h1>
    Hello World.
  </h1>,
  <h2>
    test...
  </h2>,
  <h3>
    examples
  </h3>,
  <style
    jsx={true}
  >
    
          h1 {color: black}
          h2 {color: blue}
          h3 {color: green}
        
  </style>,
]
`;
